<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    tools:context=".CalcActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_boarder_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_boarder_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_boarder_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_boarder_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <TextView
        android:id="@+id/calc_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textview"
        android:hint="@string/calc_handler"
        android:padding="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_boarder_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left" />

    <Button
        android:id="@+id/calc_btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="120dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_1"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_4"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left"
        app:layout_constraintTop_toTopOf="@id/guideline_boarder_top" />

    <Button
        android:id="@+id/calc_btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_2"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_5"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_1"
        app:layout_constraintTop_toTopOf="@id/guideline_boarder_top" />

    <Button
        android:id="@+id/calc_btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_3"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_6"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_2"
        app:layout_constraintTop_toTopOf="@id/guideline_boarder_top" />

    <Button
        android:id="@+id/calc_btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="120dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_4"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_7"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_1" />

    <Button
        android:id="@+id/calc_btn_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_5"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_8"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_4"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_2" />

    <Button
        android:id="@+id/calc_btn_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_6"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_9"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_5"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_3" />

    <Button
        android:id="@+id/calc_btn_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="120dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_7"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_addition"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_4" />

    <Button
        android:id="@+id/calc_btn_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_8"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_0"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_7"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_5" />

    <Button
        android:id="@+id/calc_btn_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_9"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_subtraction"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_8"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_6" />

    <Button
        android:id="@+id/calc_btn_addition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="120dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_addition"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_backspace"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_7" />

    <Button
        android:id="@+id/calc_btn_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_0"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_backspace"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_addition"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_8" />

    <Button
        android:id="@+id/calc_btn_subtraction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_subtraction"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_equal"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_0"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_9"/>

    <Button
        android:id="@+id/calc_btn_backspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="180dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_backspace"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_boarder_bottom"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_boarder_left"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_addition" />

    <Button
        android:id="@+id/calc_btn_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/calc_btn_equal"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_boarder_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_boarder_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/calc_btn_backspace"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_subtraction" />

</androidx.constraintlayout.widget.ConstraintLayout>